# iot-ai

./: Cargo.toml  LICENSE  README.md  main.rs
src/: main.rs
