[package]
name = "smart_factory"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }      # For async support
serde = { version = "1.0.228", features = ["derive"] }  # For serializing and deserializing data structures
ros2-client = "0.8.2"
ring = "0.17.14"